--- a/.github/workflows/local_examples.yml
+++ b/.github/workflows/local_examples.yml
@@ -7,12 +7,12 @@ on:
   pull_request:
 
 concurrency:
-  group: ${{ github.ref }}-${{ github.head_ref }}-internal-examples
+  group: ${{ github.ref }}-${{ github.head_ref }}-local-examples
   cancel-in-progress: true
 
 jobs:
-  internal-examples:
-    name: internal examples
+  local-examples:
+    name: local examples
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -27,6 +27,6 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install ".[test]"
-      - name: Run internal examples
+      - name: Run local examples
         run: |
           python examples/fodo.py
