--- a/.github/workflows/unit_tests.yml
+++ b/.github/workflows/unit_tests.yml
@@ -10,6 +10,9 @@ concurrency:
   group: ${{ github.ref }}-${{ github.head_ref }}-unit-tests
   cancel-in-progress: true
 
+permissions:
+  contents: read  # access to check out code and install dependencies
+
 jobs:
   unit-tests:
     name: unit tests
@@ -20,7 +23,7 @@ jobs:
     steps:
       - uses: actions/checkout@v6
       - name: Set up Python
-        uses: actions/setup-python@v5
+        uses: actions/setup-python@v6
         with:
           python-version: ${{ matrix.python-version }}
       - name: Install
