--- a/.github/workflows/upstream_examples.yml
+++ b/.github/workflows/upstream_examples.yml
@@ -10,6 +10,9 @@ concurrency:
   group: ${{ github.ref }}-${{ github.head_ref }}-upstream-examples
   cancel-in-progress: true
 
+permissions:
+    contents: read  # access to check out code and install dependencies
+
 jobs:
   upstream-examples:
     name: upstream examples
@@ -28,7 +31,7 @@ jobs:
           sparse-checkout: |
             examples/
       - name: Set up Python
-        uses: actions/setup-python@v5
+        uses: actions/setup-python@v6
         with:
           python-version: ${{ matrix.python-version }}
       - name: Install
