--- a/.github/workflows/examples.yml
+++ b/.github/workflows/examples.yml
@@ -1,4 +1,4 @@
-name: tests
+name: pals
 
 on:
   push:
@@ -7,15 +7,15 @@ on:
   pull_request:
 
 concurrency:
-  group: ${{ github.ref }}-${{ github.head_ref }}-local-examples
+  group: ${{ github.ref }}-${{ github.head_ref }}-examples
   cancel-in-progress: true
 
 permissions:
   contents: read  # access to check out code and install dependencies
 
 jobs:
-  local-examples:
-    name: local examples
+  examples:
+    name: examples
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -30,6 +30,6 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install ".[test]"
-      - name: Run local examples
+      - name: Run examples
         run: |
           python examples/fodo.py
