--- a/.github/workflows/examples.yml
+++ b/.github/workflows/examples.yml
@@ -7,15 +7,15 @@ on:
   pull_request:
 
 concurrency:
-  group: ${{ github.ref }}-${{ github.head_ref }}-pals-python
+  group: ${{ github.ref }}-${{ github.head_ref }}-examples
   cancel-in-progress: true
 
 permissions:
   contents: read  # access to check out code and install dependencies
 
 jobs:
-  tests:
-    name: tests
+  examples:
+    name: examples
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -30,9 +30,6 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install ".[test]"
-      - name: Test
-        run: |
-          pytest tests -v
-      - name: Examples
+      - name: Run examples
         run: |
           python examples/fodo.py
